[gd_scene load_steps=25 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Enemies/FlyingEnemy.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/FlyingEnemy.gd" type="Script" id=4]
[ext_resource path="res://GlobalScripts/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://GlobalScripts/StateMachine.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/MoveState.gd" type="Script" id=7]
[ext_resource path="res://Enemies/AttackState.gd" type="Script" id=8]
[ext_resource path="res://Enemies/PatrolState.gd" type="Script" id=9]
[ext_resource path="res://Enemies/PlayerDetection.tscn" type="PackedScene" id=10]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=11]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 5.74398

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "fly",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 5.41654

[sub_resource type="CapsuleShape2D" id=10]
radius = 6.6134
height = 10.295

[sub_resource type="CircleShape2D" id=11]
radius = 62.6534

[sub_resource type="CircleShape2D" id=12]
radius = 4.88719

[node name="FlyingEnemy" type="KinematicBody2D"]
light_mask = 4
collision_layer = 4
collision_mask = 16
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "fly"
frame = 4
playing = true
offset = Vector2( 0, -16 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.388235 )
scale = Vector2( 0.25, 0.125 )
texture = ExtResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 0, -14.1286 )
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 9 )
disabled = false

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -14.1286 )
shape = SubResource( 10 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="PatrolState" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="PatrolState"]
one_shot = true
autostart = true

[node name="StateMachine" parent="." instance=ExtResource( 6 )]

[node name="ChaseState" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="PlayerDetection" parent="." instance=ExtResource( 10 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.207843 )
shape = SubResource( 11 )

[node name="SoftCollision" parent="." instance=ExtResource( 12 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 12 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="PatrolState/Timer" to="PatrolState" method="_on_Timer_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="PlayerDetection"]
[editable path="SoftCollision"]
